// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<checkbox-component> removes validation message when at least one group option is checked 1`] = `
<checkbox-component checkbox-group="" group-options="[{&quot;value&quot;:&quot;val1&quot;,&quot;labelTxt&quot;:&quot;Val 1&quot;,&quot;inputId&quot;:&quot;val1&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:false},{&quot;value&quot;:&quot;val2&quot;,&quot;labelTxt&quot;:&quot;Val 2&quot;,&quot;inputId&quot;:&quot;val2&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:false}]" group-title="Validation Clear" name="group4" required="" validation="" validation-msg="Select one">
  <div class="check-box">
    <fieldset class="checkbox-group">
      <legend class="group-title" id="group4-legend">
        Validation Clear
        <span aria-hidden="true" class="required">
          *
        </span>
      </legend>
      <div class="form-group no-pad">
        <div class="form-check">
          <input class="form-check-input" id="val1" name="group4" required="" type="checkbox" value="val1">
          <label class="form-check-label" htmlfor="val1">
            Val 1
          </label>
        </div>
        <div class="form-check">
          <input checked="" class="form-check-input" id="val2" name="group4" required="" type="checkbox" value="val2">
          <label class="form-check-label" htmlfor="val2">
            Val 2
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</checkbox-component>
`;

exports[`<checkbox-component> renders checkbox group with options (fieldset/legend + correct initial checked) 1`] = `
<checkbox-component checkbox-group="" group-options="[{&quot;value&quot;:&quot;opt1&quot;,&quot;labelTxt&quot;:&quot;Option 1&quot;,&quot;inputId&quot;:&quot;opt1&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:true},{&quot;value&quot;:&quot;opt2&quot;,&quot;labelTxt&quot;:&quot;Option 2&quot;,&quot;inputId&quot;:&quot;opt2&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:false}]" group-title="Choose Options" name="group1" required="" validation="" validation-msg="Please select at least one">
  <div class="check-box">
    <fieldset class="checkbox-group">
      <legend class="group-title" id="group1-legend">
        Choose Options
        <span aria-hidden="true" class="required">
          *
        </span>
      </legend>
      <div class="form-group no-pad">
        <div class="form-check">
          <input checked="" class="form-check-input" id="opt1" name="group1" required="" type="checkbox" value="opt1">
          <label class="form-check-label" htmlfor="opt1">
            Option 1
          </label>
        </div>
        <div class="form-check">
          <input class="form-check-input" id="opt2" name="group1" required="" type="checkbox" value="opt2">
          <label class="form-check-label" htmlfor="opt2">
            Option 2
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</checkbox-component>
`;

exports[`<checkbox-component> renders custom checkbox group with options 1`] = `
<checkbox-component custom-checkbox-group="" group-options="[{&quot;value&quot;:&quot;optA&quot;,&quot;labelTxt&quot;:&quot;Custom A&quot;,&quot;inputId&quot;:&quot;optA&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:false},{&quot;value&quot;:&quot;optB&quot;,&quot;labelTxt&quot;:&quot;Custom B&quot;,&quot;inputId&quot;:&quot;optB&quot;,&quot;disabled&quot;:true,&quot;checked&quot;:false}]" group-title="Custom Group" name="group2">
  <div class="check-box">
    <fieldset class="checkbox-group">
      <legend class="group-title" id="group2-legend">
        Custom Group
      </legend>
      <div class="form-group no-pad">
        <div class="custom-checkbox custom-control">
          <input class="custom-control-input" id="optA" name="group2" type="checkbox" value="optA">
          <label class="custom-control-label" htmlfor="optA">
            Custom A
          </label>
        </div>
        <div class="custom-checkbox custom-control">
          <input class="custom-control-input" disabled="" id="optB" name="group2" type="checkbox" value="optB">
          <label class="custom-control-label" htmlfor="optB">
            Custom B
          </label>
        </div>
      </div>
    </fieldset>
  </div>
</checkbox-component>
`;

exports[`<checkbox-component> renders single custom checkbox 1`] = `
<checkbox-component custom-checkbox="" input-id="check2" label-txt="Custom Option" name="custom">
  <div class="check-box form-group no-pad">
    <div class="custom-checkbox custom-control">
      <input class="custom-control-input" id="check2" name="custom" type="checkbox" value="">
      <label class="custom-control-label" htmlfor="check2">
        Custom Option
      </label>
    </div>
  </div>
</checkbox-component>
`;

exports[`<checkbox-component> renders single standard checkbox 1`] = `
<checkbox-component input-id="check1" label-txt="Accept terms" name="test">
  <div class="check-box form-group no-pad">
    <div class="form-check">
      <input class="form-check-input" id="check1" name="test" type="checkbox" value="">
      <label class="form-check-label" htmlfor="check1">
        Accept terms
      </label>
    </div>
  </div>
</checkbox-component>
`;

exports[`<checkbox-component> shows validation message when no group option is selected and required+validation 1`] = `
<checkbox-component checkbox-group="" group-options="[{&quot;value&quot;:&quot;val1&quot;,&quot;labelTxt&quot;:&quot;Val 1&quot;,&quot;inputId&quot;:&quot;val1&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:false},{&quot;value&quot;:&quot;val2&quot;,&quot;labelTxt&quot;:&quot;Val 2&quot;,&quot;inputId&quot;:&quot;val2&quot;,&quot;disabled&quot;:false,&quot;checked&quot;:false}]" group-title="Validation Test" name="group3" required="" validation="" validation-msg="Please select an option">
  <div class="check-box">
    <fieldset aria-describedby="group3-validation" aria-invalid="true" class="checkbox-group was-validated">
      <legend class="group-title" id="group3-legend">
        Validation Test
        <span aria-hidden="true" class="required">
          *
        </span>
      </legend>
      <div class="form-group no-pad">
        <div class="form-check">
          <input aria-describedby="group3-validation" aria-invalid="true" class="form-check-input" id="val1" name="group3" required="" type="checkbox" value="val1">
          <label class="form-check-label" htmlfor="val1">
            Val 1
          </label>
        </div>
        <div class="form-check">
          <input aria-describedby="group3-validation" aria-invalid="true" class="form-check-input" id="val2" name="group3" required="" type="checkbox" value="val2">
          <label class="form-check-label" htmlfor="val2">
            Val 2
          </label>
        </div>
      </div>
      <div aria-live="polite" class="form-text invalid-feedback" id="group3-validation">
        Please select an option
      </div>
    </fieldset>
  </div>
</checkbox-component>
`;
